--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
     ".next/types/**/*.ts",
     "next.config.js"
   ],
-  "exclude": ["node_modules", "package/**/*", ".next/**/*"]
+  "exclude": ["node_modules", "package/**/*", ".next/**/*", "dist/**/*"]
 }
