--- a/package/front10-generative-ui/package.json
+++ b/package/front10-generative-ui/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@front10/generative-ui",
-  "version": "0.0.1",
+  "version": "0.0.1-0",
   "description": "A complete abstraction for creating generative UI components that automatically display when specific tools are executed in chat",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/index.mjs"
     },
     "./examples": {
-      "import": "./dist/examples/index.mjs",
+      "types": "./dist/examples/index.d.ts",
       "require": "./dist/examples/index.js",
-      "types": "./dist/examples/index.d.ts"
+      "import": "./dist/examples/index.mjs"
     }
   },
   "files": [
@@ -65,5 +65,6 @@
   "bugs": {
     "url": "https://github.com/front10/generative-ui/issues"
   },
-  "homepage": "https://github.com/front10/generative-ui#readme"
+  "homepage": "https://github.com/front10/generative-ui#readme",
+  "packageManager": "pnpm@9.12.3"
 }
