Add zod peer dependency and disable git checks in CI

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,4 +26,5 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_AUTO_INSTALL_PEERS: true
+          NPM_CONFIG_GIT_CHECKS: false
           # NPM_CONFIG_PROVENANCE: true
