--- a/package/front10-generative-ui/package.json
+++ b/package/front10-generative-ui/package.json
@@ -41,16 +41,18 @@
   "author": "Front10",
   "license": "MIT",
   "peerDependencies": {
+    "ai": "5.0.0-beta.6",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
-    "ai": "5.0.0-beta.6"
+    "zod": ">=3.25.76"
   },
   "dependencies": {
     "clsx": "^2.0.0",
-    "zustand": "^4.5.0",
-    "lucide-react": "^0.446.0"
+    "lucide-react": "^0.446.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.0.0",
