--- a/package/front10-generative-ui/package.json
+++ b/package/front10-generative-ui/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@front10/generative-ui",
-  "version": "1.0.0",
+  "version": "0.0.1-0",
   "description": "A complete abstraction for creating generative UI components that automatically display when specific tools are executed in chat",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/index.mjs"
     },
     "./examples": {
-      "import": "./dist/examples/index.mjs",
+      "types": "./dist/examples/index.d.ts",
       "require": "./dist/examples/index.js",
-      "types": "./dist/examples/index.d.ts"
+      "import": "./dist/examples/index.mjs"
     }
   },
   "files": [
@@ -41,16 +41,18 @@
   "author": "Front10",
   "license": "MIT",
   "peerDependencies": {
+    "ai": "5.0.0-beta.6",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
-    "ai": "5.0.0-beta.6"
+    "zod": ">=3.25.76"
   },
   "dependencies": {
     "clsx": "^2.0.0",
-    "zustand": "^4.5.0",
-    "lucide-react": "^0.446.0"
+    "lucide-react": "^0.446.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.0.0",
@@ -65,5 +67,6 @@
   "bugs": {
     "url": "https://github.com/front10/generative-ui/issues"
   },
-  "homepage": "https://github.com/front10/generative-ui#readme"
+  "homepage": "https://github.com/front10/generative-ui#readme",
+  "packageManager": "pnpm@9.12.3"
 }
